# HEPData4ML

./: .gitignore  .gitmodules  CITATION.cff  README.md  display.py  prep_condor.py  run.py  test.py
condor/: .gitignore  README.md  prep_condor.py  run_condor.py
condor/util/: __init__.py  condor_job.sh  copy_output.py  utils.py
condor/util/condor_templates/: condor_template.sub
config/: __init__.py  config.py  selectors.py
plot/: README.md  display.ipynb  display.py  event_display.py  kinematics.ipynb  kinematics.py  overlay.py  plot.py
plot/plot_util/: plot_util.py
setup/conda/: hepdata4ml.yml  lgn_data.yml
setup/cvmfs/: README.md  setup.sh
test/: conversion_test.py
tutorial/: README.md  tutorial_0.sh  tutorial_1.sh  tutorial_2.sh
tutorial/config/: config_0.py  config_1.py  config_2.py
util/: args.py  buffer.py  calcs.py  config.py  conversion.py  conversion_method1.py  delphes.py  event_filter.py  event_selection.py  fastjet.py  generation.py  generation_old.py  hdf5.py  hepmc.py  jet_selection.py  meta.py  particle_selection.py  qol_util.py  simulation.py  truth_selection.py  vectorcalcs.py
util/condor/: condor_job.sh  condor_utils.py
util/condor/condor_templates/: condor_template.sub
util/conv_utils/: utils.py
util/delphes/: delphes.py  setup.py  tracing.py
util/delphes/cards/: delphes_card_CMS.tcl  delphes_card_CMS_custom.tcl  trackResolutionCMS.tcl  trackResolutionCMS_Electrons.tcl
util/display/: setup.py  viewer.py
util/fastjet/: __init__.py  jetfinderbase.py  setup.py
util/gen_utils/: utils.py
util/hepmc/: Pythia8ToHepMC3.py  hepmc.py  install.py  readers.py  setup.py
util/hepmc/test/: test_events.root
util/math/: rotations.py
util/particle_selection/: algos.py  particle_selection.py  selection_algos.py  truth_selection_nnp.py
util/pileup/: pileup.py
util/post_processing/: containment.py  jets.py  jh_tagging.py  rotate.py  tracing.py  truth_sum.py
util/post_processing/utils/: containment.py  ghost_association.py  jet_filter.py  jhtagger.py  rotations.py  simple_btag.py  softdrop.py
util/pythia/: pythia.py  test.py  utils.py  writer.py
util/pythia/pythia_templates/: HardQCD.txt  SoftQCD.txt  Top_Wqq.txt  ZNuNu.txt  bbar.txt
util/pythia_templates/: QCD.txt  SoftQCD.txt  Top_Wqq.txt
util/qol_utils/: pdg.py  qol_util.py
util/root/: CMakeLists.txt  README.md  build.sh
util/root/cmake_templates/: CMakeLists_jhtagger.txt  CMakeLists_vectorcalcs.txt
util/root/display/: .gitignore  CMakeLists.txt  build.sh
util/root/display/display/: CMakeLists.txt
util/root/display/display/inc/: Display_LinkDef.h
util/root/display/display/inc/display/: BranchElement.h  CaloData.h  Display.h  DisplayInterface.h  EventDisplay.h  ExDelphesDisplay.h  JetCone.h  JetElementList.h  TestUtils.h  Track.h  Utils.h
util/root/display/display/inc/display/old/: Display.hx
util/root/display/display/src/: BranchElement.cxx  CaloData.cxx  Display.cxx  DisplayInterface.cxx  EventDisplay.cxx  ExDelphesDisplay.cxx  JetCone.cxx  JetElementList.cxx  TestUtils.cxx  Track.cxx  Utils.cxx
util/root/display/display/src/old/: Display.cxx
util/root/jhtagger/: CMakeLists.txt  build.sh
util/root/jhtagger/jhtagger/: CMakeLists.txt
util/root/jhtagger/jhtagger/inc/: JHTagger_LinkDef.h
util/root/jhtagger/jhtagger/inc/jhtagger/: JHTagger.h
util/root/jhtagger/jhtagger/src/: JHTagger.cxx
util/root/vcalcs/: CMakeLists.txt  build.sh
util/root/vcalcs/vectorcalcs/: CMakeLists.txt
util/root/vcalcs/vectorcalcs/inc/: VectorCalcs_LinkDef.h
util/root/vcalcs/vectorcalcs/src/: VectorCalcs.cxx
util/root/vectorcalcs/inc/vectorcalcs/: VectorCalcs.h
util/root/vectorcalcs/src/: VectorCalcs.cxx
util/tools/: check_file.py  concat.py  concat_hepmc.py  match.py  match_daughters.py  peek.py  remove_truth_keys.py  rescale.py  split.py  unpack.py
util_new/: config.py  conversion.py  generation.py  generation_method1.py  jet_selection.py
